<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deleteDialogCard"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/guluturn_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/deleteMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_profile_confirmation"
            android:textSize="16sp"
            android:textColor="@color/guluturn_primary"
            android:gravity="center"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@null"
                android:background="@drawable/confirm_button_background"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:backgroundTint="@null"
                android:background="@drawable/reject_button_background"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
